update README.md args section